# VibeBot

./: README.md
futures-ai-bot/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
futures-ai-bot/apps/api/src/api/: main.py  state.py
futures-ai-bot/apps/dashboard/: app.py
futures-ai-bot/config/: futures_metadata.yaml
futures-ai-bot/data/sample/: CL_1m.parquet  CL_5m.parquet  ES_1m.csv  ES_1m.parquet  ES_5m.parquet  GC_1m.parquet  GC_5m.parquet  MCL_1m.parquet  MCL_5m.parquet  MES_1m.parquet  MES_5m.parquet  MGC_1m.parquet  MGC_5m.parquet  MNQ_1m.parquet  MNQ_5m.parquet  NQ_1m.csv  NQ_1m.parquet  NQ_5m.parquet
futures-ai-bot/docs/: architecture.md  backtesting.md  model_governance.md  risk_controls.md  tradingview_setup.md
futures-ai-bot/futures_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
futures-ai-bot/infra/: Dockerfile.dashboard
futures-ai-bot/libs/common/src/common/: __init__.py  data.py  logging.py  metadata.py  models.py  settings.py
futures-ai-bot/models/registry/: index.json
futures-ai-bot/models/registry/mdl_1bf82a19/20260308223323/: metadata.json  regime_model.pkl
futures-ai-bot/models/registry/mdl_2d4a70da/20260308210440/: metadata.json  regime_model.pkl
futures-ai-bot/models/registry/mdl_4c9fbd63/20260308210650/: model.pkl  regime_model.pkl
futures-ai-bot/models/registry/mdl_c2052246/20260308210536/: metadata.json  regime_model.pkl
futures-ai-bot/reports/: latest_shadow_model.json  promotion_gate.json
futures-ai-bot/services/backtest/src/backtest/: engine.py  metrics.py  run.py
futures-ai-bot/services/executor/src/executor/: __init__.py  models.py  paper_broker.py  risk.py
futures-ai-bot/services/strategy/src/strategy/: features.py  signal_engine.py
futures-ai-bot/services/training/src/training/: dataset.py  ingestion.py  labels.py  modeling.py  registry.py  synthetic_data.py  train.py  workflow.py
futures-ai-bot/tests/: test_backtest_smoke.py  test_health.py  test_ingestion_and_features.py  test_labels_and_dataset.py  test_metadata.py  test_paper_broker.py  test_registry.py  test_webhook.py
futures-ai-bot/tradingview/: indicator_alerts.pine  payload_templates.json  strategy_alerts.pine
